# chat-core

./: CMakeLists.txt  com.sh  log.c  log.h  main.c
src/: friends.c  friends.h  log.c  log.h  main.c  messenger.c  messenger.h  network.c  network.h  utils.c  utils.h
