cmake_minimum_required(VERSION 3.10)
#set(CMAKE_C_STANDARD_REQUIRED TRUE)
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=iso9899:1999")
set(CMAKE_C_FLAGS "-std=iso9899:1999")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
project(chat)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED TRUE)

 if (CMAKE_VERSION VERSION_LESS "3.20")
     message("kkkkk")
     endif()
include_directories("${CMAKE_SOURCE_DIR}/src")
add_executable(chat src/log.c src/network.c src/main.c)
